# inras

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  format.sh
include/inras/Assembler/: Assembler.h
include/inras/Defs/: Addressing.h  Defs.h  Register.h
include/inras/Instruction/: Instruction.h
include/inras/Macros/: InstMacros.inc  RegMacros.inc
lib/: CMakeLists.txt
lib/Assembler/: Assembler.cpp
lib/Tests/: TestAsm.cpp  TestDefs.cpp  Tests.inc
